# bpmn_similarity

./: .gitignore  LICENSE  README.md  gui.py  main.py  max_clique_search.py  pyproject.toml  utilities.py
data/: big-process-23a-7gw-bpmn.bpmn  big-process-26a-12gw-bpmn.bpmn  medium-process-11a-6gw-bpmn.bpmn  model_1.bpmn  model_2.bpmn  model_3.bpmn  model_4.bpmn  model_5.bpmn  model_6.bpmn  small-process-4a-2gw-bpmn.bpmn  telrendel-sp-lda.bpmn
