[tool.poetry]
name = "bpmn_similarity"
version = "0.1.0"
description = "Thesis project, measuring similarity of business process models in BPMN2.0 format."
authors = ["szucsba <szucsbarnabas98@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
SpiffWorkflow = "^1.1.6"
igraph = "^0.9.10"
networkx = "^2.8"
pycairo = "^1.21.0"
matplotlib = "^3.5.1"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
